Implement basic ignite database support