@@ -6,63 +6,63 @@
     <parent>
         <groupId>org.liquibase</groupId>
         <artifactId>liquibase-parent-pom</artifactId>
-        <version>0.5.8</version> <!-- Replace with the desired version -->
+        <version>1.0.0</version>
     </parent>
 
-    <groupId>com.example</groupId>
-    <artifactId>my-extension</artifactId>
+    <groupId>org.liquibase.ext</groupId>
+    <artifactId>liquibase-ignite</artifactId>
     <version>0.0.1</version>
     <packaging>jar</packaging>
 
-    <name>Liquibase Extension Example</name>
-    <description>Describe your extension here</description>
+    <name>Liquibase Extension for Apache Ignite</name>
     <url>https://docs.liquibase.com</url>
 
     <licenses>
         <license>
-            <name>Liquibase EULA</name>
-            <url>https://www.liquibase.com/eula</url>
+            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+            <name>Apache License, Version 2.0</name>
         </license>
     </licenses>
 
     <developers>
         <developer>
-            <name>Your Name</name>
-            <email>youremail@example.com</email>
-            <organization>Liquibase</organization>
-            <organizationUrl>https://www.liquibase.com/</organizationUrl>
+            <name>Georg Romstorfer</name>
+            <email>georg.romstorfer@gmail.com</email>
         </developer>
     </developers>
 
     <scm>
-        <connection>scm:git:git://github.com/liquibase/liquibase-extension-example.git</connection>
-        <developerConnection>scm:git:ssh://github.com:liquibase/liquibase-extension-example.git</developerConnection>
-        <url>https://github.com/liquibase/liquibase-extension-example</url>
+        <connection>scm:git:git://github.com/romge/liquibase-ignite.git</connection>
+        <developerConnection>scm:git:ssh://github.com:romge/liquibase-ignite.git</developerConnection>
+        <url>https://github.com/romge/liquibase-ignite</url>
     </scm>
 
     <properties>
-        <liquibase.version>4.32.0</liquibase.version>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <sonar.organization>liquibase</sonar.organization>
-        <sonar.projectKey>${sonar.organization}_${project.artifactId}</sonar.projectKey>
-        <sonar.projectName>${project.name}</sonar.projectName>
-        <sonar.projectDescription>${project.description}</sonar.projectDescription>
-        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-        <sonar.scm.provider>git</sonar.scm.provider>
-        <sonar.qualitygate.wait>true</sonar.qualitygate.wait>
+        <ignite.version>3.1.0</ignite.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>org.liquibase</groupId>
-            <artifactId>liquibase-core</artifactId>
-            <version>${liquibase.version}</version>
+            <groupId>org.apache.ignite</groupId>
+            <artifactId>ignite-runner</artifactId>
+            <version>${ignite.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.ignite</groupId>
+            <artifactId>ignite-jdbc</artifactId>
+            <version>${ignite.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>2.0.17</version>
+            <artifactId>jul-to-slf4j</artifactId>
+            <version>1.7.36</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.36</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -70,9 +70,24 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.sonarsource.scanner.maven</groupId>
-                <artifactId>sonar-maven-plugin</artifactId>
-                <version>5.1.0.4751</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.lang.invoke=ALL-UNNAMED
+                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+                        --add-opens java.base/java.io=ALL-UNNAMED
+                        --add-opens java.base/java.nio=ALL-UNNAMED
+                        --add-opens java.base/java.math=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.time=ALL-UNNAMED
+                        --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
+                        --add-opens java.base/jdk.internal.access=ALL-UNNAMED
+                        --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+                        -Dio.netty.tryReflectionSetAccessible=true
+                    </argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
